# ai-engineer-study

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  decisions.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/playground/: page.tsx
dashboard/components/: top-nav.tsx
dashboard/components/dashboard/: call-detail-sheet.tsx  calls-table.tsx  cost-by-model-chart.tsx  dashboard-client.tsx  stat-cards.tsx  use-dashboard.ts
dashboard/components/playground/: comparison-column.tsx  config-rail.tsx  model-picker.tsx  playground-client.tsx  use-playground.ts
dashboard/lib/: api.ts  config.ts  types.ts
docs/results/: provider_comparison.txt  temperature_sweep_results.txt
src/accounting/: __init__.py  pricing.py  usage_cost.py
src/db/: __init__.py  analytics.py  models.py  repository.py
src/hello_world/: anthropic_hello.py  embedding_hello.py  huggingface_tokenizer.py  openai_hello.py  pgvector_hello.py
src/llm_calls/: __init__.py  anthropic_client.py  base.py  gemini_client.py  models.py  ollama_client.py  openai_client.py
src/rest/: app.py  schemas.py
src/study_scripts/: provider_comparison.py  temperature_sweep.py
tests/: test_ollama.py  test_providers.py
tests/db/: test_analytics.py  test_repository.py
tests/integration/: test_providers.py
tests/unit/accounting/: test_usage_cost.py
tests/unit/llm_calls/: test_cancellation.py
