[project]
name = "ai-engineer-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py314"

[tool.mypy]
python_version = "3.14"
